<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.myowncard.MainActivity">

        <android.support.v7.widget.CardView
            style="@style/HeaderCard"
            android:elevation="6dp"
            android:id="@+id/header_card"
            android:layout_marginBottom="16dp"
            >

            <LinearLayout
                style="@style/HeaderCard"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        style="@style/ImageHeader"
                        android:id="@+id/imageHeaderLogo"
                        android:src="@drawable/headerLogo"
                        android:contentDescription="@string/company_focus"
                        />

                    <TextView
                        android:id="@+id/header_card_company_name"
                        style="@style/TextHeader"
                        android:text="@string/company_focus"
                        android:layout_alignBottom="@id/imageHeaderLogo"
                        />

                </RelativeLayout>

                <TextView
                    android:id="@+id/header_card_company_description"
                    style="@style/BodyContent"
                    android:text="@string/company_description"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/contact_details"
            style="@style/HeaderCard"
            >

            <LinearLayout
                style="@style/HeaderCard"
                android:orientation="vertical">

                <TextView
                    style="@style/Contact_Header"
                    android:text="@string/contact_heading"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:drawableStart="@drawable/ic_person_white_24dp"
                    android:gravity="start"
                    />

                <LinearLayout
                    style="@style/Contact_Content"
                    android:paddingTop="4dp">

                    <ImageView
                        style="@style/Contact_Icon"
                        android:src="@drawable/ic_call_black_24dp"
                        />

                    <TextView
                        style="@style/Contact_Text"
                        android:text="@string/contact_phone"
                        android:autoLink="phone"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/Contact_Content">

                    <ImageView
                        style="@style/Contact_Icon"
                        android:src="@drawable/ic_mail_black_24dp"
                        />

                    <TextView
                        style="@style/Contact_Text"
                        android:text="@string/contact_email"
                        android:autoLink="email"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/Contact_Content">

                    <ImageView
                        style="@style/Contact_Icon"
                        android:src="@drawable/ic_home_black_24dp"
                        />

                    <TextView
                        style="@style/Contact_Text"
                        android:text="@string/contact_website"
                        android:autoLink="web"
                        />

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>